--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Custom css by @Oki */
 svg {
     display: inherit;
+}
+.input-group label.input-group-text {
+    display: flex;
+    font-size: initial;
 }
